--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,15 +15,18 @@
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "css-loader": "^4.3.0",
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "prop-types": "^15.7.2",
